--- a/monitoreo/templates/simas/vulnerable.html
+++ b/monitoreo/templates/simas/vulnerable.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {%load unslugify %}
 {%block extra_header%}
+<style type="text/css">
+    .vulnerable{background: url(/archivos/imagen/fondosubmenuhover.png) repeat-x;}
+</style>
 <script type="text/javascript" src="{{MEDIA_URL}}js/highcharts.js"></script>
 <script type="text/javascript" src="{{MEDIA_URL}}js/exporting.js"></script>
 <script type="text/javascript">
@@ -473,7 +476,7 @@ var chart;
 {%endblock%}
 {% block titulo %}
 Subindicador Vulnerable
-<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno"><img src="/archivos/imagen/menos.png"/></span></div>
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador<span id="estado" class="estadouno"><img src="/archivos/imagen/menos.png"/></span></a> </div>
 {% endblock%}
 
 {% block contenido %}
