--- a/monitoreo/templates/simas/vulnerable.html
+++ b/monitoreo/templates/simas/vulnerable.html
@@ -486,7 +486,11 @@ Subindicador Vulnerable
 <div id="mostrar">
      {% include "simas/menu.html" %}
 </div>
+
+<div class="subindicador"><a class="exportar guardarXLS" href="#" onclick="exportarXLS('modalidad'); return false;"></a></div>
+
 <div class="contenido">
+<div id="modalidad">
     <table width="100%">
         <thead>
         <caption>Fenomenos naturales</caption>
@@ -683,6 +687,7 @@ Subindicador Vulnerable
             </tr>
         </tbody>
 </table>
+</div>
 <div class="contenedor">
         <div class="grafico-title"></div>
         <div id="container3"></div>
